...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srl_direction="bottom"
                        tools:visibility="visible">

                        <com.kilogramm.mattermost.ui.MatterRecyclerView
                            android:id="@+id/rev"
                            style="@style/scrollbar_shape_style"
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
                            android:scrollbars="vertical"
                            android:visibility="gone" />
                    </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
...

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/newMessageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/edit_reply_message_layout"
...
                android:layout_height="1dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/very_light_grey" />

            <LinearLayout
                android:id="@+id/sendingMessageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="horizontal"
                android:visibility="visible">

...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_attachment_grey_24dp" />

                <EditText
                    android:id="@+id/writingMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:hint="@string/type_something"
                    android:textColorHint="@color/very_light_grey"
                    android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
                    android:maxLines="5"/>

                <TextView
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp"
                    android:text="Send"
                    android:textColor="@color/grey" />
            </LinearLayout>
        </LinearLayout>

<!--        <include
            android:id="@+id/bottomToolbar"
...
