<resources>
    <string name="app_name">Matternative</string>
    <string name="main_description">All your team communication in one place, searchable and accessible anywhere.</string>

    <string name="main_title_url">Your team URL</string>
    <string name="main_example_url">e.g. https://mattermost.example.com</string>
    <string name="main_next_button">Next step</string>
    <string name="main_url_error">Url is not valid</string>

                    <!--LogIn-->
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_sign_in">Sign in</string>
    <string name="network_error">Network error. Please check your Internet connetion</string>

    <string name="forgot_password_hint_email">Email</string>
    <string name="forgot_password_recovery_button">Recovery</string>
    <string name="forgot_password_description">Enter the email address associated with your team.</string>
    <string name="more">More…</string>
...

    <string name="title_forgot_password">Password recovery</string>
    <string name="choose_team">Choose your team</string>
    <string name="text_forgot_password">A password reset link has been sent to %s \nPlease check your inbox.</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="confirm_post_delete">Confirm Post Delete</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try again</string>
    <string name="reply">Reply</string>
    <string name="permalink">Permalink</string>
    <string name="copy">Copy</string>
...
    <string name="settings">Settings</string>
    <string name="invite_new_member">Invite New Member</string>
    <string name="invite_new_member_n">Member #</string>
    <string name="help">Help</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="about_mattermost">About Mattermost</string>
    <string name="email">EMAIL</string>
    <string name="first_name">FIRST NAME</string>
    <string name="first_name_optional">FIRST NAME (OPTIONAL)</string>
    <string name="last_name">LAST NAME</string>
    <string name="last_name_optional">LAST NAME (OPTIONAL)</string>
    <string name="add_another">Add another</string>

...
